--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors - Console Edition</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="app.js" defer></script>
+    <script type ="module" src="app.js" defer></script>
+    <script type= "module" src="dom.js"defer></script>
 </head>
 
 <body>
-    <h1>Open Console to play Rock, Paper Scissors!</h1>
+    <h1>Rock, paper, scissors!</h1>
+    <button class="selection">Rock</button>
+    <button class="selection">Paper</button>
+    <button class="selection">Scissors</button>
 </body>
 
 </html>
