Add play button functionality, turn logs into DOM Methods

--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
 
 <body>
     <h1>Rock, paper, scissors!</h1>
+
     <button class="selection">Rock</button>
     <button class="selection">Paper</button>
     <button class="selection">Scissors</button>
+
+    <div class="results-container">
+        <p class="results"></p>
+
+    </div>
 </body>
 
 </html>
